## Makefile.am -- Process this file with automake to produce Makefile.in
noinst_PROGRAMS = Generator Exhaustive RTreeLoad RTreeQuery RTreeBulkLoad
INCLUDES = -I../../include 
Generator_SOURCES = Generator.cc 
Generator_LDADD = ../../libspatialindex.la
Exhaustive_SOURCES = Exhaustive.cc 
Exhaustive_LDADD = ../../libspatialindex.la
RTreeLoad_SOURCES = RTreeLoad.cc 
RTreeLoad_LDADD = ../../libspatialindex.la
RTreeQuery_SOURCES = RTreeQuery.cc 
RTreeQuery_LDADD = ../../libspatialindex.la
RTreeBulkLoad_SOURCES = RTreeBulkLoad.cc 
RTreeBulkLoad_LDADD = ../../libspatialindex.la
