## Makefile.am -- Process this file with automake to produce Makefile.in
noinst_PROGRAMS = Generator Exhaustive TPRTreeLoad TPRTreeQuery
INCLUDES = -I../../include 
Generator_SOURCES = RandomGenerator.cc Generator.cc RandomGenerator.h
Generator_LDADD = ../../libspatialindex.la
Exhaustive_SOURCES = Exhaustive.cc 
Exhaustive_LDADD = ../../libspatialindex.la
TPRTreeLoad_SOURCES = TPRTreeLoad.cc 
TPRTreeLoad_LDADD = ../../libspatialindex.la
TPRTreeQuery_SOURCES = TPRTreeQuery.cc 
TPRTreeQuery_LDADD = ../../libspatialindex.la
